# stages-thermo

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  M2_PONCHON_SAVARIT_PLAN.md  PLAN.md  PUBLISHING.md  README.md  ROADMAP.md  TODO.md
.github/workflows/: ci.yml  release.yml
docs/: references.md
docs/theory/: README.md  mccabe-thiele.md  ponchon-savarit.md
engine/: Cargo.toml  README.md
engine/benches/: engine_bench.rs
engine/src/: lib.rs  py_bindings.rs  thermo.rs  types.rs
engine/src/binary/: equilibrium.rs  mccabe_thiele.rs  mod.rs  ponchon_savarit.rs
engine/src/column/: mod.rs  model.rs
engine/tests/: m1_mccabe_thiele.rs  m2_ponchon_savarit.rs  smoke.rs
hooks/: pre-push
notebooks/: 01-mccabe-thiele.ipynb  02-ponchon-savarit.ipynb  README.md
python/: README.md  pyproject.toml
python/src/stages/: __init__.py  plotting.py
python/tests/: test_engine.py  test_mccabe_thiele.py  test_ponchon_savarit.py
