[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
# Distribution name on PyPI. The Python import name is `stages` (see
# python-source = "src" + the src/stages/ directory), following the common
# "distribution != import" pattern (Pillow → PIL) and mirroring vle-thermo →
# `import vle`. See PLAN §2 for the import-name rationale.
name = "stages-thermo"
# 0.0.1 = the name-holding stub registered at M0. Real functionality lands
# from M1; keep in sync with Cargo.toml [workspace.package] version.
version = "0.0.1"
description = "Staged-separation (distillation) column solver: McCabe–Thiele, Ponchon–Savarit, FUG shortcut, and rigorous MESH methods, built on vle-thermo"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Miguel Jackson", email = "admin@migueljackson.dev" },
]
keywords = [
    "distillation",
    "separation",
    "chemical-engineering",
    "mccabe-thiele",
    "mesh",
    "column",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.24",
    # The thermodynamics backend. stages-thermo adds no thermo of its own
    # (PLAN §1/§3); the notebooks drive `vle.System` for thermo exploration
    # alongside `stages` for columns.
    "vle-thermo>=0.8",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=7.0", "maturin>=1.0"]

[project.urls]
Homepage = "https://github.com/miguelju/stages-thermo"
Repository = "https://github.com/miguelju/stages-thermo"
Issues = "https://github.com/miguelju/stages-thermo/issues"
Changelog = "https://github.com/miguelju/stages-thermo/blob/main/ROADMAP.md"

[tool.maturin]
# Path to the Rust crate that produces the native extension module.
manifest-path = "../engine/Cargo.toml"
# Build with the "python" feature flag to enable PyO3 bindings.
features = ["python"]
# Pure Python code lives alongside the native module under src/stages/.
python-source = "src"
# The native module is importable as stages._engine.
module-name = "stages._engine"

[tool.cibuildwheel]
# abi3 wheels: PyO3's abi3-py310 feature (engine/Cargo.toml) makes one wheel
# per (os, arch) cover CPython 3.10, 3.11, 3.12, 3.13 and future versions. The
# resulting filenames are tagged `cp310-abi3-*` and pip installs them on any
# CPython >= 3.10.
build = "cp310-*"
skip = ["pp*", "*-musllinux_*"]
# manylinux_2_28 ~ AlmaLinux 8 — needed for Rust edition 2024 / MSRV 1.85.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
test-requires = ["pytest"]
# {package} expands to cibuildwheel's package-dir (= python/ here), so this
# resolves to python/tests/. Don't use {project} — that's the repo root.
test-command = "pytest {package}/tests"
build-verbosity = 1

[tool.cibuildwheel.macos]
# arm64 only — no Intel macOS cross-build (negligible install base; easy to
# add later if a user needs it).
archs = ["arm64"]

[tool.cibuildwheel.linux]
archs = ["auto64"]

[tool.cibuildwheel.windows]
archs = ["AMD64"]
